Fix FindBugs and Eclipse warnings Remove out-dated comments
git-svn-id: https://svn.apache.org/repos/asf/tomcat/trunk@1059342 13f79535-47bb-0310-9956-ffa450edef68